style.css
.bucket {
  height: 100px;
  width: 200px;
  background-color: lightblue;
  margin: 5%
}

.hide{
  display: none;
}

.redBorder{
  border: 1px solid red;
}

.submitted {
  float: right;
  min-height: 20%;
  min-width: 20%;
  background-color: tomato;
}

/*.submittedTitle {
  float: right;
}*/

